# Site

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  site.pm2config.json  summer.py
data/headgear/: amber_earrings.json  ancient_helm.json  barbarian_helm.json  climbers_bandana.json  desert_voe_headband.json  diamond_circlet.json  lynel_mask.json  opal_earrings.json  ruby_circlet.json  sapphire_circlet.json  sheiks_mask.json  topaz_earrings.json
misc/: about.md  socials.md
src/: about_me.rs  blog.rs  botw.rs  errors.rs  main.rs  socials.rs  something.rs
static/css/: style.css
templates/: about.html.tera  blog.html.tera  index.html.tera  pages.html.tera  root.html.tera  socials.html.tera  something.html.tera
templates/errors/: generic.html.tera
