[package]
name = "site"
version = "0.1.0"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
comrak = "0.18.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]
